--- a/T-CHAT Post/T-CHAT Post.css
+++ b/T-CHAT Post/T-CHAT Post.css
@@ -61,7 +61,7 @@ header {
   color: #fff;
   /* アイコンの色を緑に変更 */
   border-radius: 8px 8px 8px 8px;
-  margin-left: 700px;
+  margin-left: 1000px;
 }
 
 .post {
@@ -74,7 +74,7 @@ header {
   color: #fff;
   /* アイコンの色を緑に変更 */
   border-radius: 8px 8px 8px 8px;
-  margin-left: 40px;
+  margin-left: auto;
 }
 
 .box1 {
@@ -84,11 +84,11 @@ header {
 }
 
 .list {
-  width: 12%;
+  width: 15%;
   font-size: 15px;
   min-height: 50px;
   max-height: 200px;
-  margin-right: 30px;
+  margin-left: 20px;
   border: 2px solid #c0c0c0;
   border-radius: 8px 8px 8px 8px;
   font-size: 16px;
@@ -99,6 +99,7 @@ header {
   width: 85%;
   font-size: 24px;
   border: 2px solid #c0c0c0;
+  margin-right: 20px;
   border-radius: 8px 8px 8px 8px;
 }
 
