--- a/T-CHAT Post/T-CHAT Post.css
+++ b/T-CHAT Post/T-CHAT Post.css
@@ -140,7 +140,7 @@ header {
 .tag {
   min-height: 50px;
   max-height: 200px;
-  width: 77%;
+  width: 1150px;
   margin-top: 10px;
   margin-right: 20px;
   font-size: 24px;
