--- a/T-CHAT Post/T-CHAT Post.css
+++ b/T-CHAT Post/T-CHAT Post.css
@@ -55,26 +55,27 @@ header {
   background: none;
   border: none;
   cursor: pointer;
+  margin: 0; /* 余白をなくす */
   font-size: 29px;
   font-family: "Arial Black";
   background-color: #9dc3e6;
   color: #fff;
   /* アイコンの色を緑に変更 */
   border-radius: 8px 8px 8px 8px;
-  margin-left: 1000px;
+  margin-left: auto;
 }
 
 .post {
   background: none;
   border: none;
   cursor: pointer;
+  margin: 0; /* 余白をなくす */
   font-size: 29px;
   font-family: "Arial Black";
   background-color: #92d050;
   color: #fff;
   /* アイコンの色を緑に変更 */
   border-radius: 8px 8px 8px 8px;
-  margin-left: auto;
 }
 
 .box1 {
@@ -166,7 +167,6 @@ header {
 .pencil {
   color: #a8a7a7;
   /* アイコンの色を緑に変更 */
-
   background: none;
   border: none;
   cursor: pointer;
