--- a/T-CHAT Post/T-CHAT Post.css
+++ b/T-CHAT Post/T-CHAT Post.css
@@ -62,7 +62,7 @@ header {
   color: #fff;
   /* アイコンの色を緑に変更 */
   border-radius: 8px 8px 8px 8px;
-  margin-left: auto;
+  margin-left: 700px;
 }
 
 .post {
