--- a/T-CHAT-Home/T-CHAT-Home.css
+++ b/T-CHAT-Home/T-CHAT-Home.css
@@ -30,8 +30,8 @@ h4 {
 }
 
 .background {
-  background-color: #F2F2F2;
-  border: 10px solid #E3E9EE;
+  background-color: #f2f2f2;
+  border: 10px solid #e3e9ee;
   /* ページ全体に10pxの灰色のボーダーを設定 */
   height: 100vh;
   display: flex;
@@ -41,7 +41,7 @@ h4 {
 }
 
 header {
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   /* ヘッダーの背景色を設定 */
   color: #fff;
   /* テキストの色を設定 */
@@ -96,7 +96,7 @@ header {
 ::placeholder {
   color: #e6e6e6;
   text-align: left;
-  font-family: "Arial Black", 'MS Gothic';
+  font-family: "Arial Black", "MS Gothic";
   padding-left: 3px;
 }
 
@@ -116,9 +116,9 @@ header {
 .search-form button::after {
   width: 20px;
   height: 20px;
-  background-image: url('data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2024%2024%22%3E%20%3Cpath%20d%3D%22M23.7%2020.8%2019%2016.1c-.2-.2-.5-.3-.8-.3h-.8c1.3-1.7%202-3.7%202-6C19.5%204.4%2015.1%200%209.7%200S0%204.4%200%209.7s4.4%209.7%209.7%209.7c2.3%200%204.3-.8%206-2v.8c0%20.3.1.6.3.8l4.7%204.7c.4.4%201.2.4%201.6%200l1.3-1.3c.5-.5.5-1.2.1-1.6zm-14-5.1c-3.3%200-6-2.7-6-6s2.7-6%206-6%206%202.7%206%206-2.6%206-6%206z%22%20fill%3D%22%23fff%22%3E%3C%2Fpath%3E%20%3C%2Fsvg%3E');
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2024%2024%22%3E%20%3Cpath%20d%3D%22M23.7%2020.8%2019%2016.1c-.2-.2-.5-.3-.8-.3h-.8c1.3-1.7%202-3.7%202-6C19.5%204.4%2015.1%200%209.7%200S0%204.4%200%209.7s4.4%209.7%209.7%209.7c2.3%200%204.3-.8%206-2v.8c0%20.3.1.6.3.8l4.7%204.7c.4.4%201.2.4%201.6%200l1.3-1.3c.5-.5.5-1.2.1-1.6zm-14-5.1c-3.3%200-6-2.7-6-6s2.7-6%206-6%206%202.7%206%206-2.6%206-6%206z%22%20fill%3D%22%23fff%22%3E%3C%2Fpath%3E%20%3C%2Fsvg%3E");
   background-repeat: no-repeat;
-  content: '';
+  content: "";
 }
 
 .notification {
@@ -137,8 +137,8 @@ header {
   padding-right: 8px;
   font-family: "Arial Black";
   color: white;
-  background-color: #AFDFE4;
-  border: #AFDFE4;
+  background-color: #afdfe4;
+  border: #afdfe4;
   border-radius: 8px 8px 8px 8px;
   font-size: 25px;
   text-decoration: none;
@@ -152,8 +152,8 @@ header {
   padding-right: 10px;
   font-family: "Arial Black";
   color: white;
-  background-color: #92D050;
-  border: #92D050;
+  background-color: #92d050;
+  border: #92d050;
   border-radius: 8px 8px 8px 8px;
   font-size: 25px;
   text-decoration: none;
@@ -209,7 +209,6 @@ main {
   /* 右側に20pxのパディングを設定 */
   overflow: auto;
   scroll-snap-align: start;
-
 }
 
 main::-webkit-scrollbar {
@@ -228,7 +227,7 @@ main::-webkit-scrollbar-thumb {
 }
 
 section {
-  background: #FDF6E9;
+  background: #fdf6e9;
   color: #000;
   padding: 11px;
   /* margin-bottom: 9px; */
@@ -240,6 +239,8 @@ section {
   color: #000;
   margin-bottom: 6px;
   border-radius: 26px;
+  position: relative; /* 相対位置を指定 */
+  z-index: 1; /* 他の要素より手前に配置 */
 }
 
 a.article {
@@ -252,6 +253,8 @@ a.article {
   padding: 2px;
   margin-bottom: 6px;
   border-radius: 26px;
+  position: relative; /* 相対位置を指定 */
+  z-index: 1; /* 他の要素より手前に配置 */
 }
 
 .box3 {
@@ -260,10 +263,12 @@ a.article {
   padding: 2px;
   margin-bottom: 6px;
   border-radius: 26px;
+  position: relative; /* 相対位置を指定 */
+  z-index: 1; /* 他の要素より手前に配置 */
 }
 
 article {
-  background: #FDF6E9;
+  background: #fdf6e9;
   color: #000;
   padding: 3px;
   margin-top: 5px;
@@ -280,7 +285,7 @@ aside {
   padding: 3px;
   box-sizing: border-box;
   background-color: #fff2cc;
-  border: 2px solid #BF9000;
+  border: 2px solid #bf9000;
   border-radius: 20px;
   position: relative;
   display: inline;
@@ -360,4 +365,21 @@ aside::after {
   border-radius: 15px;
   color: #000000;
   padding: 5px 8px 5px 8px;
+}
+.unsolved-category-answer,
+.Notanswered-category-answer,
+.answered-category-answer {
+  bottom: 10px;
+  position: absolute; /* 絶対位置を指定 */
+  z-index: 2; /* 他の要素より手前に配置 */
+}
+.unsolved-category-answer {
+  margin-left: 700px;
+}
+
+.Notanswered-category-answer {
+  margin-left: 700px; /* .unsolved-category-answer と同じスタイルを持たせる */
+}
+.answered-category-answer {
+  margin-left: 700px; /* .unsolved-category-answer と同じスタイルを持たせる */
 }
