--- a/T-CHAT-Post/T-CHAT-Post.css
+++ b/T-CHAT-Post/T-CHAT-Post.css
@@ -143,14 +143,14 @@ header {
   max-height: 200px;
   margin-left: -22px; /* 負の値に変更して左に移動 */
 
-  width: 900px;
+  /* width: 900px;
   margin-top: 10px;
   margin-right: 20px;
   font-size: 24px;
   border: 2px solid #c0c0c0;
   border-left: none;
   border-radius: 0 8px 8px 0;
-} */
+}  */
 
   /* 例: 枠線をオレンジ色に設定 */
 
