--- a/T-CHAT-Home.css
+++ b/T-CHAT-Home.css
@@ -387,3 +387,61 @@ aside::after {
 .answered-category-answer {
   margin-left: 700px; /* .unsolved-category-answer と同じスタイルを持たせる */
 }
+/* ここからモーダルウィンドウ */
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0); /* 背景が半透明になるように設定 */
+}
+
+/* モーダルウィンドウ */
+#modal {
+  display: flex;
+  flex-direction: column; /* 列方向に配置 */
+  position: fixed;
+  top: 55%;
+  left: 60%;
+  width: 350px;
+  color: #000000;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  z-index: 2; /* 最前面に表示 */
+  padding: 8px 16px;
+}
+
+.setting {
+  position: relative; /* 相対位置を指定 */
+  left: 280px;
+  bottom: 55px;
+  cursor: pointer; /* カーソルをポインタに変更 */
+  margin-right: 280px;
+}
+
+.content {
+  position: relative; /* 相対位置を指定 */
+  margin-bottom: 250px;
+  bottom: 70px;
+
+  margin-top: 10px; /* 適切なマージンを追加 */
+  border-top: 1px solid #000; /* ボーダーを追加 */
+  padding-top: 20px; /* 適切なパディングを追加 */
+}
+
+.list {
+  border-top: 1px solid #000; /* ボーダーを追加 */
+  margin-top: auto;
+  text-align: center; /* 文字を中央揃えにする */
+  cursor: pointer; /* カーソルをポインタに変更 */
+  color: blue; /* リンクの色を設定 */
+  text-decoration: underline; /* 下線を表示 */
+  padding: 16px 0px;
+}
+
+/* ここまでがモーダルウィンドウ */
