--- a/T-CHAT-Signin/T-CHAT-Signin.css
+++ b/T-CHAT-Signin/T-CHAT-Signin.css
@@ -31,7 +31,7 @@ header {
   margin-right: 40px;
   max-width: 150px;
   /* ロゴ画像の
-      最大幅を設定 */
+        最大幅を設定 */
 }
 .name {
   margin-top: 1px;
@@ -49,13 +49,13 @@ header {
   margin-bottom: 20px;
 }
 /* body {
-  font-family: Arial, sans-serif;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  margin: 0;
-} */
+    font-family: Arial, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+  } */
 
 .login-container {
   padding: 30px;
@@ -121,6 +121,12 @@ input {
   padding-bottom: 10px;
   border-radius: 8px;
   font-weight: bold; /* ボタンのテキストを太字にする */
+}
+
+.small.title {
+  position: relative;
+  left: 200px;
+  font-size: 27px;
 }
 .signin {
   color: #9e9e9e;
