--- a/T-CHAT-Login/T-CHAT-Login.css
+++ b/T-CHAT-Login/T-CHAT-Login.css
@@ -89,14 +89,14 @@ label {
   margin-bottom: 5px; /* ラベルの下に少し余白を設ける */
 }
 
-#username {
+#username_or_mail {
   font-size: 20px; /* テキスト入力フィールドのフォントサイズを変更 */
   outline-color: #55c500;
   border-radius: 4px;
   border: 1px solid #000000;
 }
 
-#username::placeholder {
+#username_or_mail::placeholder {
   font-size: 20px; /* placeholderのフォントサイズを変更 */
 }
 #password {
