--- a/T-CHAT-Post/quill.snow.css
+++ b/T-CHAT-Post/quill.snow.css
@@ -758,19 +758,19 @@
 }
 .ql-snow .ql-picker.ql-header .ql-picker-label::before,
 .ql-snow .ql-picker.ql-header .ql-picker-item::before {
-  content: "Normal";
+  content: "テキスト";
 }
 .ql-snow .ql-picker.ql-header .ql-picker-label[data-value="1"]::before,
 .ql-snow .ql-picker.ql-header .ql-picker-item[data-value="1"]::before {
-  content: "Heading 1";
+  content: "見出し 1";
 }
 .ql-snow .ql-picker.ql-header .ql-picker-label[data-value="2"]::before,
 .ql-snow .ql-picker.ql-header .ql-picker-item[data-value="2"]::before {
-  content: "Heading 2";
+  content: "見出し 2";
 }
 .ql-snow .ql-picker.ql-header .ql-picker-label[data-value="3"]::before,
 .ql-snow .ql-picker.ql-header .ql-picker-item[data-value="3"]::before {
-  content: "Heading 3";
+  content: "見出し 3";
 }
 .ql-snow .ql-picker.ql-header .ql-picker-label[data-value="4"]::before,
 .ql-snow .ql-picker.ql-header .ql-picker-item[data-value="4"]::before {
@@ -859,7 +859,7 @@
 }
 .ql-toolbar.ql-snow {
   border: 2px solid #ccc;
-  border-radius: 5px 5px 0 0; /* 右下と左下だけを丸くする */
+  border-radius: 5px 5px 5px 5px; /* 右下と左下だけを丸くする */
 
   box-sizing: border-box;
   font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
