--- a/T-CHAT-Detail/T-CHAT-Detail.css
+++ b/T-CHAT-Detail/T-CHAT-Detail.css
@@ -186,6 +186,7 @@ main {
   overflow: auto;
   scroll-snap-align: start;
 }
+
 main::-webkit-scrollbar {
   width: 13px;
 }
@@ -200,6 +201,7 @@ main::-webkit-scrollbar-thumb {
   border-radius: 100px;
   width: 130px;
 }
+
 .box1 {
   border: 2px solid #8faadc;
   color: #000;
@@ -238,31 +240,42 @@ h1 {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
 .total {
-  margin-left: 1000px; /* .unsolved-category-answer と同じスタイルを持たせる */
-  position: absolute; /* 絶対位置を指定 */
-  z-index: 2; /* 他の要素より手前に配置 */
+  margin-left: 1000px;
+  /* .unsolved-category-answer と同じスタイルを持たせる */
+  position: absolute;
+  /* 絶対位置を指定 */
+  z-index: 2;
+  /* 他の要素より手前に配置 */
   bottom: 1px;
 }
+
 .answer5 {
-  position: relative; /* 相対位置を指定 */
-  z-index: 1; /* 他の要素より手前に配置 */
+  position: relative;
+  /* 相対位置を指定 */
+  z-index: 1;
+  /* 他の要素より手前に配置 */
 }
+
 .name {
   font-weight: bolder;
   margin-top: 1px;
   margin-bottom: 1px;
 }
+
 .date {
   margin-top: 1px;
   margin-bottom: 1px;
   margin-left: 15px;
 }
+
 .name {
   margin-top: 1px;
   margin-bottom: 1px;
   margin-left: 15px;
 }
+
 .large {
   background: #fdf6e9;
   color: #000;
@@ -275,6 +288,7 @@ h1 {
   margin-top: 1px;
   margin-bottom: 1px;
 }
+
 .border {
   border-top: 1px solid #000;
   /* 線の色と太さを指定 */
@@ -297,15 +311,18 @@ h1 {
   margin-top: 1px;
   margin-bottom: 1px;
 }
+
 .text-Extremely-small {
   margin-top: 10px;
   margin-bottom: 10px;
   margin-left: 40px;
 }
+
 .response {
   background-color: #fff;
   border-radius: 8px 8px 8px 8px;
 }
+
 .reply {
   margin-left: 15px;
 }
@@ -316,7 +333,8 @@ h1 {
   width: 20%;
   height: 20px;
   background-color: #f2f2f2;
-  font-weight: bold; /* または font-weight: 700; */
+  font-weight: bold;
+  /* または font-weight: 700; */
 
   border-radius: 8px 8px 8px 8px;
 }
@@ -324,14 +342,17 @@ h1 {
 .text::placeholder {
   color: #a6a6a6;
 }
+
 .answer {
   margin-top: 10px;
   background-color: #fff;
   border-radius: 8px 8px 8px 8px;
 }
+
 .answer2 {
   display: flex;
-  overflow: hidden; /* float要素の後にくる要素が影響を受けないようにするために使用 */
+  overflow: hidden;
+  /* float要素の後にくる要素が影響を受けないようにするために使用 */
   flex-direction: column;
 }
 
@@ -341,58 +362,86 @@ h1 {
 }
 
 .textarea {
-  border-top: none; /* 上辺に線を引かない */
-  border-bottom: none; /* 上辺に線を引かない */
+  border-top: none;
+  /* 上辺に線を引かない */
+  border-bottom: none;
+  /* 上辺に線を引かない */
   font-size: 20px;
 }
+
 .textarea::placeholder {
-  color: #a8a7a7; /* アイコンの色を緑に変更 */
+  color: #a8a7a7;
+  /* アイコンの色を緑に変更 */
   font-size: 20px;
 }
 
 #answer-button {
   cursor: pointer;
 
-  margin-left: 1200px; /* ボタンとテキストエリアの間に余白を追加 */
+  margin-left: 1200px;
+  /* ボタンとテキストエリアの間に余白を追加 */
   background-color: #55c500;
   border: none;
-  right: 20px; /* 任意の値を指定して調整 */
+  right: 20px;
+  /* 任意の値を指定して調整 */
   position: relative;
   margin-bottom: 10px;
-  width: 120px; /* 任意の幅を指定 */
-  height: 40px; /* 任意の高さを指定 */
+  width: 120px;
+  /* 任意の幅を指定 */
+  height: 40px;
+  /* 任意の高さを指定 */
   font-size: 18px;
-  color: #fff; /* 黒色の文字色 */
-  font-weight: bold; /* または font-weight: 700; */
+  color: #fff;
+  /* 黒色の文字色 */
+  font-weight: bold;
+  /* または font-weight: 700; */
 
   margin-left: auto;
   border-radius: 8px 8px 8px 8px;
-  display: block; /* 要素をブロック要素に変更 */
-  margin-right: 0; /* 右側のマージンを0に設定 */
-  transition: background-color 0.3s ease; /* 背景色の変化をアニメーション化 */
+  display: block;
+  /* 要素をブロック要素に変更 */
+  margin-right: 0;
+  /* 右側のマージンを0に設定 */
+  transition: background-color 0.3s ease;
+  /* 背景色の変化をアニメーション化 */
 
   &:hover {
-    background-color: #3f9d00; /* ホバー時の背景色 */
+    background-color: #3f9d00;
+    /* ホバー時の背景色 */
   }
 }
+
 .file-upload {
-  background-color: #ffffff; /* 白色の背景色 */
-  color: #000000; /* 黒色の文字色 */
-  display: inline-block; /* インラインブロック要素にすることで横幅がコンテンツに合わせられる */
-  cursor: pointer; /* マウスが重なるとポインターを表示 */
-  border-radius: 5px; /* 任意の角丸を追加 */
+  background-color: #ffffff;
+  /* 白色の背景色 */
+  color: #000000;
+  /* 黒色の文字色 */
+  display: inline-block;
+  /* インラインブロック要素にすることで横幅がコンテンツに合わせられる */
+  cursor: pointer;
+  /* マウスが重なるとポインターを表示 */
+  border-radius: 5px;
+  /* 任意の角丸を追加 */
   margin-top: 10px;
 }
+
 .file-upload i {
-  color: #808080; /* 灰色のアイコン色 */
+  color: #808080;
+  /* 灰色のアイコン色 */
 }
+
 .file-upload:hover {
-  background-color: #f0f0f0; /* ホバー時の背景色 */
+  background-color: #f0f0f0;
+  /* ホバー時の背景色 */
 }
+
 .background-color {
-  border-top: none; /* 上辺に線を引かない */
-  border-right: 1px solid #000; /* 右辺に1pxの黒い線を引く */
-  border-bottom: 1px solid #000; /* 下辺に1pxの黒い線を引く */
+  border-top: none;
+  /* 上辺に線を引かない */
+  border-right: 1px solid #000;
+  /* 右辺に1pxの黒い線を引く */
+  border-bottom: 1px solid #000;
+  /* 下辺に1pxの黒い線を引く */
   border-left: 1px solid #000;
   border-radius: 0 0 8px 8px;
 }
@@ -435,42 +484,59 @@ input[type="file"] {
   color: white;
   cursor: pointer;
   border-radius: 5px;
-  transition: background-color 0.3s ease; /* 背景色の変化をアニメーション化 */
+  transition: background-color 0.3s ease;
+  /* 背景色の変化をアニメーション化 */
 
   /* ホバー時のスタイル */
   &:hover {
-    background-color: #d36200; /* ホバー時の色 */
+    background-color: #d36200;
+    /* ホバー時の色 */
   }
 }
+
 /* ここまでがbuttonを押し込む設定 */
 /* ファイルインプットのスタイルを変更 */
-input[type="file"] + span {
-  background-color: #3498db; /* ブルーの背景色 */
+input[type="file"]+span {
+  background-color: #3498db;
+  /* ブルーの背景色 */
   color: #fff;
   padding: 10px 15px;
   cursor: pointer;
-  border-radius: 5px; /* ボーダーラジアスを設定 */
+  border-radius: 5px;
+  /* ボーダーラジアスを設定 */
 }
 
 /* 選択されたファイル名表示用のスタイル */
 #fileDetails {
-  margin-top: 10px; /* 適宜調整 */
-  text-align: right; /* テキストを右寄せにする */
-  font-size: 14px; /* 適宜調整 */
-  color: white; /* テキストカラーを白に設定 */
-  background-color: #fff; /* 背景色を白に設定 */
-  padding: 5px; /* 適宜調整 */
-  display: inline-block; /* インラインブロック要素に設定 */
-  border-radius: 5px; /* ボーダーラジアスを設定 */
+  margin-top: 10px;
+  /* 適宜調整 */
+  text-align: right;
+  /* テキストを右寄せにする */
+  font-size: 14px;
+  /* 適宜調整 */
+  color: white;
+  /* テキストカラーを白に設定 */
+  background-color: #fff;
+  /* 背景色を白に設定 */
+  padding: 5px;
+  /* 適宜調整 */
+  display: inline-block;
+  /* インラインブロック要素に設定 */
+  border-radius: 5px;
+  /* ボーダーラジアスを設定 */
 }
 
 /* ファイル名と拡張子を表示するためのスタイル */
 #fileNameExtension {
   display: inline-block;
-  margin-right: auto; /* ボタンとの間隔を調整 */
-  color: black; /* 拡張子のカラーをブラックに設定 */
-  background-color: #fff; /* 背景色を白に設定 */
-  border-radius: 5px; /* ボーダーラジアスを設定 */
+  margin-right: auto;
+  /* ボタンとの間隔を調整 */
+  color: black;
+  /* 拡張子のカラーをブラックに設定 */
+  background-color: #fff;
+  /* 背景色を白に設定 */
+  border-radius: 5px;
+  /* ボーダーラジアスを設定 */
 }
 
 /* プレビューボタンのスタイル */
@@ -479,7 +545,8 @@ input[type="file"] + span {
   color: white;
   border: none;
   padding: 10px 15px;
-  position: relative; /* 相対配置を指定 */
+  position: relative;
+  /* 相対配置を指定 */
   cursor: pointer;
   margin-left: auto;
   display: inline-block;
@@ -494,34 +561,47 @@ input[type="file"] + span {
 
 /* 画像表示用のスタイル */
 #imageContainer {
-  display: none; /* 初期状態では非表示 */
-  text-align: center; /* 画像を中央揃えにする */
+  display: none;
+  /* 初期状態では非表示 */
+  text-align: center;
+  /* 画像を中央揃えにする */
 }
 
 #selectedImage {
-  max-width: 50%; /* 画像の最大幅を設定 */
-  max-height: 50%; /* 画像の最大高さを設定 */
-  margin-top: 10px; /* 適宜調整 */
-  border-radius: 5px; /* ボーダーラジアスを設定 */
+  max-width: 50%;
+  /* 画像の最大幅を設定 */
+  max-height: 50%;
+  /* 画像の最大高さを設定 */
+  margin-top: 10px;
+  /* 適宜調整 */
+  border-radius: 5px;
+  /* ボーダーラジアスを設定 */
   border: 3px solid #bfbfbf;
 }
 
 /* 閉じるボタンのスタイル */
 #closeButton {
-  display: none; /* 初期状態では非表示 */
-  background-color: #e74c3c; /* レッドの背景色 */
+  display: none;
+  /* 初期状態では非表示 */
+  background-color: #e74c3c;
+  /* レッドの背景色 */
   color: white;
   border: none;
   padding: 10px 15px;
   cursor: pointer;
-  margin-top: 10px; /* 適宜調整 */
-  border-radius: 5px; /* ボーダーラジアスを設定 */
-  font-weight: bold; /* または font-weight: 700; */
-  transition: background-color 0.3s ease; /* 背景色の変化をアニメーション化 */
+  margin-top: 10px;
+  /* 適宜調整 */
+  border-radius: 5px;
+  /* ボーダーラジアスを設定 */
+  font-weight: bold;
+  /* または font-weight: 700; */
+  transition: background-color 0.3s ease;
+  /* 背景色の変化をアニメーション化 */
 
   /* ホバー時のスタイル */
   &:hover {
-    background-color: #c0392b; /* ホバー時の背景色 */
+    background-color: #c0392b;
+    /* ホバー時の背景色 */
   }
 }
 
