Detailの枠の色変更

--- a/T-CHAT-Detail/T-CHAT-shun.css
+++ b/T-CHAT-Detail/T-CHAT-shun.css
@@ -203,7 +203,7 @@ main::-webkit-scrollbar-thumb {
 }
 
 .box1 {
-  border: 2px solid #8faadc;
+  border: 2px solid #ff6969;
   color: #000;
   margin-bottom: 6px;
   border-radius: 26px;
