--- a/T-CHAT-Detail/T-CHAT-tome.css
+++ b/T-CHAT-Detail/T-CHAT-tome.css
@@ -203,7 +203,7 @@ main::-webkit-scrollbar-thumb {
 }
 
 .box1 {
-  border: 2px solid #8faadc;
+  border: 2px solid #ffd966;
   color: #000;
   margin-bottom: 6px;
   border-radius: 26px;
