--- a/T-CHAT-Detail/T-CHAT-tome.css
+++ b/T-CHAT-Detail/T-CHAT-tome.css
@@ -202,8 +202,8 @@ main::-webkit-scrollbar-thumb {
   width: 130px;
 }
 
-.box1 {
-  border: 2px solid #8faadc;
+.box2 {
+  border: 2px solid #ffd966;
   color: #000;
   margin-bottom: 6px;
   border-radius: 26px;
@@ -232,11 +232,13 @@ h1 {
   margin-left: 15px;
 }
 
-.Notanswered-category {
-  background-color: #ffd966;
+.unsolved-category {
+  background-color: #8faadc;
   border-radius: 15px;
   color: #000000;
   padding: 5px 8px 5px 8px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .total {
@@ -604,6 +606,18 @@ input[type="file"]+span {
 }
 
 /* ここまでがプレビューのプログラム */
+
+/* ここからモーダルウィンドウ */
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0);
+  /* 背景が半透明になるように設定 */
+}
 
 /* モーダルウィンドウ */
 #modal {
